More work on reward details. Added toggle for rewards

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,6 +93,7 @@
     "enablePokemon": true,
     "enablePokestops": true,
     "enableLured": true,
+    "showQuestRewards": true,
     "showWeather": true,
     "enableWeatherOverlay": true,
     "enableScannedLocations": true,
